--- a/config-data/booking-service-prod.properties
+++ b/config-data/booking-service-prod.properties
@@ -1,4 +1,5 @@
 spring.application.name=booking-service
+user-service=project profile prod
 spring.datasource.url=jdbc:postgresql://localhost:5432/booking_service
 spring.datasource.username= postgres
 spring.datasource.password= 123456789
