--- a/config-data/car-service-prod.properties
+++ b/config-data/car-service-prod.properties
@@ -1,4 +1,5 @@
 spring.application.name=car-service
+booking-service=project profile prod
 spring.data.mongodb.uri=mongodb://localhost:27017/cars
 server.port=0
 
