--- a/config-data/user-service-dev.properties
+++ b/config-data/user-service-dev.properties
@@ -1,4 +1,5 @@
 spring.application.name=user-service
+user-service=project profile dev
 server.port=0
 spring.datasource.url=jdbc:mysql://localhost:3306/user_service
 spring.datasource.username= root
