--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=config-service
 server.port=8888
-spring.cloud.config.server.native.search-locations=classpath:/configurations
-spring.profiles.active=native
+spring.cloud.config.server.git.uri=https://github.com/mohid2/microservicespringboot
+spring.cloud.config.server.git.search-paths=config-data
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=master
