--- a/config-data/car-service-prod.properties
+++ b/config-data/car-service-prod.properties
@@ -3,4 +3,4 @@ booking-service=project profile prod
 spring.data.mongodb.uri=mongodb://localhost:27017/cars
 server.port=0
 
-eureka.instance.instance-id=${spring.application.name}${random.uuid}
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
