--- a/config-data/car-service-dev.properties
+++ b/config-data/car-service-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=car-service
 booking-service=project profile dev 
 spring.data.mongodb.uri=mongodb://localhost:27017/cars
-server.port=0
+server.port=8081
 
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
