--- a/config-data/booking-service-dev.properties
+++ b/config-data/booking-service-dev.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/booking_service
 spring.datasource.username= postgres
 spring.datasource.password= 123456789
 spring.jpa.hibernate.ddl-auto=create
-server.port=0
+server.port=8083
 
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
