--- a/config-data/user-service-dev.properties
+++ b/config-data/user-service-dev.properties
@@ -1,9 +1,9 @@
 spring.application.name=user-service
 user-service=project profile dev
-server.port=0
+server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/user_service
 spring.datasource.username= root
 spring.datasource.password= 123456789
 spring.jpa.hibernate.ddl-auto=create
 
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
