--- a/config-data/car-service-dev.properties
+++ b/config-data/car-service-dev.properties
@@ -2,5 +2,5 @@ spring.application.name=car-service
 booking-service=project profile dev 
 spring.data.mongodb.uri=mongodb://localhost:27017/cars
 server.port=9090
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
