--- a/config-data/eureka-service.properties
+++ b/config-data/eureka-service.properties
@@ -1,7 +1,10 @@
 spring.application.name=eureka-service
+
 server.port=8761
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
+
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.instance.hostname= localhost
-eureka.client.service-url.defaultZone= http://${eureka.instance.hostname}:${server.port}/eureka/
 
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
