--- a/config-data/car-service-dev.properties
+++ b/config-data/car-service-dev.properties
@@ -1,6 +1,13 @@
 spring.application.name=car-service
 booking-service=project profile dev 
 spring.data.mongodb.uri=mongodb://localhost:27017/cars
-server.port=9090
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+server.port=0
+eureka.client.serviceUrl.defaultZone==http://eureka:password@localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+#Keycloak
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/spring-boot-dev/protocol/openid-connect/certs
+
+#Actuator
+management.endpoints.web.exposure.include=health
+management.endpoints.web.base-path=/actuator/inventory
