--- a/config-data/car-service-dev.properties
+++ b/config-data/car-service-dev.properties
@@ -2,7 +2,7 @@ spring.application.name=car-service
 booking-service=project profile dev 
 spring.data.mongodb.uri=mongodb://localhost:27017/cars
 server.port=0
-eureka.client.serviceUrl.defaultZone==http://eureka:password@localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 #Keycloak
