--- a/config-service/src/main/resources/config/payment-service.yml
+++ b/config-service/src/main/resources/config/payment-service.yml
@@ -1,22 +1,20 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/user_service
+    url: jdbc:mysql://localhost:3306/payment_service
     username: root
     password: 123456789
 
   jpa:
     hibernate:
       ddl-auto: create
-
   kafka:
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: localhost:9090
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      retries: 1
+      retries: -1
       properties:
-        spring.json.type.mapping: UserNotification:app.vercel.mohammedelyousfi.user_service.domain.model.UserNotification
-
+        spring.json.type.mapping: PaymentNotification:app.vercel.mohammedelyousfi.payment_service.domain.model.BookingNotification
 
 server:
   port: 0
@@ -25,8 +23,3 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
