--- a/booking_service/src/main/resources/application.yml
+++ b/booking_service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
   application:
     name: booking-service
-  config:
-    import: optional:configserver:http://localhost:8888
+  cloud:
+    config:
+      uri: http://localhost:8888
