--- a/car-service/src/main/resources/application.yml
+++ b/car-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
     name: car-service
-  config:
-    import: optional:configserver:http://localhost:8888
-
+  cloud:
+    config:
+      uri: http://localhost:8888
 
 
